# ToDoList

./: CMakeLists.txt  itemview.cpp  itemview.h  itemview.ui  listitem.cpp  listitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newitemform.cpp  newitemform.h  newitemform.ui  resources.qrc  styles.qss  subtask.cpp  subtask.h  subtaskeditor.cpp  subtaskeditor.h  subtaskeditor.ui  subtaskview.cpp  subtaskview.h  subtaskview.ui  tag.cpp  tag.h  tageditor.cpp  tageditor.h  tageditor.ui  taglabel.cpp  taglabel.h  userdata.cpp  userdata.h
